--- Release 0.9.0, 24. Aug. 2017 --- 

2017-08-21 Ashok Nadkarni

        Windows build system (VC and mingw) modernised.

2017-08-17 Rolf Ade  <rolf@pointsman.de>

        New feature "creating real FQ nodes with *fromScript methods",
        by adding option -namespace to [dom createNodeCmd].

2017-08-14 Rolf Ade  <rolf@pointsman.de>

        Updated TEA.

2017-07-29 Rolf Ade  <rolf@pointsman.de>

        Removed hacky check on [load] time if the tclsh and tDOM are
        build with incompatible TCL_UTF_MAX (because it did not work
        anymore with recent tcl because of changes in core).

2017-07-28 Rolf Ade  <rolf@pointsman.de>

        Added JSON support. New -json option to [dom parse]. New doc
        method asJSON. New node method jsonType. New option -jsonType
        of [dom createNodeCmd]. New option -tagName of [dom
        createNodeCmd]. New option -jsonType to dom method
        createDocumentNode.

2017-04-06 Rolf Ade  <rolf@pointsman.de>

        Added HTM5 parser (new -html5 option to [dom parse]). Requires
        gumbo lib and must be enabled at configure time.
        
2016-10-01 Rolf Ade  <rolf@pointsman.de>

        Updated to expat 2.2.0.

2015-09-11 Rolf Ade  <rolf@pointsman.de>

        Added options -xmlDeclaration and -encString to the asXML
        method of the domDoc and domNode commands.

2015-04-11 Rolf Ade  <rolf@pointsman.de>

        Changed behavior wrt to result code of a called
        -xsltmessagecmd script. Up to now, the result code of that
        script evaluation was ignored. Now, any other return code of
        that script then TCL_OK terminates the xslt transformation and
        returns error. Purposeful termination may be signaled with
        return -code break, for which the error message will be empty.

2015-04-01 Rolf Ade  <rolf@pointsman.de>

        Added new expat parser cmd method currentmarkup. 

2015-03-26 Rolf Ade  <rolf@pointsman.de>

        Added option -indentAttrs to the domDoc/domNode method