@@ -7,12 +7,6 @@
 This directory contains a freely distributable thread-safe extension
 to Tcl/Tk called tDOM.
 
-tDOM was started by Jochen Loewer (loewerj@hotmail.com) and developed
-by Jochen and Rolf Ade (rolf@pointsman.de) with contributions by Zoran
-Vasiljevic (zv@archiware.com). Since more than a decade it is
-maintained and developed by Rolf Ade.
-
-
 tDOM contains:
 
     *  for convenience expat 2.2.0, the XML parser originated from
@@ -55,7 +49,7 @@ DOCUMENTATION
 
     The documentation is included into the source distribution in HTML
     and man format. Alternatively, read it online starting at
-    http://tdom.org/index.html/doc/tdom-0-9-0/doc/index.html
+    http://tdom.org/index.html/doc/trunk/doc/index.html
 
 
 GETTING THE CODE
@@ -114,3 +108,10 @@ REPORTING BUGS
     Please head to http://tdom.org/index.html/ticket and click on "New
     Ticket". Log in as anonymous and report your findings. If you
     prefer to have an individual login write Rolf a mail.
+
+HISTORY
+
+    tDOM was started by Jochen Loewer (loewerj@hotmail.com) and
+    developed by Jochen and Rolf Ade (rolf@pointsman.de) with
+    contributions by Zoran Vasiljevic (zv@archiware.com). Since more
+    than a decade it is maintained and developed by Rolf Ade.
